# dpp-exceptions-api

./: LICENSE  README.md
api/: Cargo.toml
api/src/: main.rs
api/src/endpoints/: events.rs  exceptions.rs  mod.rs
api/src/models/: event_model.rs  mod.rs
api/src/services/: dynamodb.rs
aws/: Cargo.toml
aws/src/: main.rs
